--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.headerClass {
+  background-color: #ee7320;
+  background-image: linear-gradient(33deg,rgba(211,84,0,.15),transparent 69%),linear-gradient(90deg,transparent 28%,#e5a901);
+  padding-top: 8px;
+  padding-bottom: 8px;
+  box-shadow: 0 0 33px rgba(0,0,0,.33);
+}
 /* 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
