--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,13 @@
   padding-bottom: 8px;
   box-shadow: 0 0 33px rgba(0,0,0,.33);
 }
+.landing-hero {
+  background-image: linear-gradient(170deg,transparent,rgba(89,51,127,.33)),linear-gradient(130deg,rgba(42,148,214,.98) 30%,rgba(54,123,192,.64) 52%,rgba(89,51,127,.84)),url(https://assets-global.website-files.com/575edfeea4bf5b9f21de5618/579684151fe20a2103874767_sistema-erp-pymes-egafutura-cloud.jpg);
+}
+.the-para-shade{
+  background-image: linear-gradient(rgba(12,44,64,.16),rgba(12,44,64,.16));
+}
+
 /* 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -34,13 +41,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
