--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,6 @@
 background-color: rgba(44,62,80,.24);
 background-image: linear-gradient(135deg,rgba(0,118,179,.84),transparent 71%);
 }
+.the-shadow {
+  box-shadow: inset 0 -2px 40px 2px rgba(0,0,0,.15) !important;
+}
