--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,6 @@ background-image: linear-gradient(135deg,rgba(0,118,179,.84),transparent 71%);
 .illusion h2 {
   animation: moveUp 3s ease infinite; /* Apply animation to the h2 element */
 }
+.grid-section {
+  background-image: linear-gradient(178deg,transparent 79%,rgba(89,51,127,.12)),linear-gradient(rgba(255,255,255,.96),rgba(255,255,255,.96));
+}
