--- a/src/index.css
+++ b/src/index.css
@@ -84,3 +84,12 @@ background-image: linear-gradient(135deg,rgba(0,118,179,.84),transparent 71%);
     padding-top: 140px;
     padding-bottom: 160px;
 }
+.complex{
+    background-image: linear-gradient(135deg, transparent 75%, rgba(255, 255, 255, .14)), linear-gradient(160deg, #d4145a 30%, #f48500);
+    border: 1px solid #d4145a;
+    border-bottom-width: 7px;
+    padding-top: 120px;
+    padding-bottom: 124px;
+    position: relative;
+    box-shadow: 0 0 24px rgba(0, 0, 0, .24);
+}
