--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,14 @@ background-image: linear-gradient(135deg,rgba(0,118,179,.84),transparent 71%);
     position: relative;
     box-shadow: 0 0 24px rgba(0, 0, 0, .24);
 }
+.fCard{
+  background-image: (160deg,rgba(255,255,255,.98) 36%,rgba(255,255,255,.5) 77%)
+}
+.sCard{
+background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,255,.5) 77%);
+}
+.foCard{
+background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,255,.5) 77%);}
+.siCard{
+background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,255,.5) 77%);
+}
