--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
         background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: 180px;
-    border-top: 5px solid rgba(0, 0, 0, .6);
+    border-top: 10px solid rgba(0, 0, 0, .6);
 }
 .firstCardTitle{
   background-color: #ffd000;
@@ -124,7 +124,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: 180px;
-    border-top: 5px solid rgba(0, 0, 0, .6);
+    border-top: 10px solid rgba(0, 0, 0, .6);
 }
 .secondCardTitle{
   background-color:#46C438;
@@ -136,7 +136,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: 180px;
-    border-top: 5px solid rgba(0, 0, 0, .6);
+    border-top: 10px solid rgba(0, 0, 0, .6);
 }
 .fourthCardTitle{
   background-color: #ffd000;
@@ -151,8 +151,34 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: 180px;
-    border-top: 5px solid rgba(0, 0, 0, .6);
+    border-top: 10px solid rgba(0, 0, 0, .6);
 }
 .sixthCardTitle{
   background-color: #ee7320;
+}
+.fYear{
+      background-color: rgb(30, 175, 100);
+      background-image: linear-gradient(rgba(0,0,0,.24),rgba(0,0,0,.24)),linear-gradient(90deg,rgba(255,255,255,.08) 44%,rgba(0,0,0,.05));
+}
+.sYear{
+    background-color: rgb(0, 139, 201);
+  background-image: linear-gradient(rgba(0,0,0,.24),rgba(0,0,0,.24)),linear-gradient(90deg,rgba(255,255,255,.08) 44%,rgba(0,0,0,.05));
+  }
+.foYear{
+background-color: rgb(72, 161, 177);
+background-image: linear-gradient(rgba(0,0,0,.24),rgba(0,0,0,.24)),linear-gradient(90deg,rgba(255,255,255,.08) 44%,rgba(0,0,0,.05));
+  }
+.siYear{
+background-color: rgb(38, 183, 212);
+background-image: linear-gradient(rgba(0,0,0,.24),rgba(0,0,0,.24)),linear-gradient(90deg,rgba(255,255,255,.08) 44%,rgba(0,0,0,.05));  }
+.button{
+      color: #fff;
+    background-image: linear-gradient(315deg, #1fdb6a, #19366b);
+    border: 2px solid #19366b;
+    border-bottom-width: 7px;
+    border-radius: 1px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    padding: 10px 33px;
 }
