--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
 }
 .firstCardTitle{
   background-color: #ffd000;
+  background-image: linear-gradient(transparent 87%,rgba(0,0,0,.08)),linear-gradient(90deg,rgba(0,0,0,.18),transparent);
 }
 .secondCard{
     background-image: url("https://assets-global.website-files.com/575ef60509a5a7a9116d9f8c/604a846c8b5cab90b0cf05d6_EGA%20Futura%20512.png");
@@ -128,6 +129,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
 }
 .secondCardTitle{
   background-color:#46C438;
+  background-image: linear-gradient(transparent 87%,rgba(0,0,0,.08)),linear-gradient(90deg,rgba(0,0,0,.18),transparent);
 }
 .fourthCard{
     background-image: url("https://assets-global.website-files.com/575ef60509a5a7a9116d9f8c/604a8441557440d323ca230b_EGA%20Futura%20Base%20de%20datos%20512.png");
@@ -140,9 +142,12 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
 }
 .fourthCardTitle{
   background-color: #ffd000;
+    background-image: linear-gradient(transparent 87%,rgba(0,0,0,.08)),linear-gradient(90deg,rgba(0,0,0,.18),transparent);
+
 }
 .fifthCardTitle{
   background-color: #e63f17;
+  background-image: linear-gradient(transparent 87%,rgba(0,0,0,.08)),linear-gradient(90deg,rgba(0,0,0,.18),transparent);
 }
 .sixthCard{
     background-image: url("https://assets-global.website-files.com/575ef60509a5a7a9116d9f8c/604a7ed30089793daee82291_EGA%20Futura%20Inventory%20512.png");
@@ -155,6 +160,7 @@ background-image: linear-gradient(160deg,rgba(255,255,255,.98) 36%,rgba(255,255,
 }
 .sixthCardTitle{
   background-color: #ee7320;
+  background-image: linear-gradient(transparent 87%,rgba(0,0,0,.08)),linear-gradient(90deg,rgba(0,0,0,.18),transparent);
 }
 .fYear{
       background-color: rgb(30, 175, 100);
