--- a/src/index.css
+++ b/src/index.css
@@ -86,8 +86,8 @@ background-image: linear-gradient(135deg,rgba(0,118,179,.84),transparent 71%);
 }
 .complex{
     background-image: linear-gradient(135deg, transparent 75%, rgba(255, 255, 255, .14)), linear-gradient(160deg, #d4145a 30%, #f48500);
-    border: 1px solid #d4145a;
-    border-bottom-width: 7px;
+    border: 3px solid #d4145a;
+    border-bottom-width: 14px;
     padding-top:30px;
     position: relative;
     box-shadow: 0 0 24px rgba(0, 0, 0, .24);
@@ -186,4 +186,14 @@ background-image: linear-gradient(rgba(0,0,0,.24),rgba(0,0,0,.24)),linear-gradie
     bottom: 15px;
     right: 15px;
     padding: 10px 33px;
+}
+.footer-logo{
+  background-image: linear-gradient(40deg,rgba(0,0,0,.5) 42%,rgba(0,0,0,.33) 90%);
+  background-color: #0f4066;
+}
+.footer-last{
+  background-color: #01111d;
+  background-image: linear-gradient(134deg,#010d16,transparent 33%),linear-gradient(74deg,transparent 38%,rgba(0,139,201,.1));
+  border-top: 16px solid #010d16;
+  padding: 48px 33% 48px 8%;
 }
